--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3263,6 +3263,8 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 
 [Recommender Systems with Generative Retrieval](https://arxiv.org/pdf/2305.05065.pdf)
 
+![tiger](../assets/tiger.png)
+
 ## P5
 
 [Recommendation as Language Processing (RLP):A Unified Pretrain, Personalized Prompt & Predict Paradigm (P5)](https://arxiv.org/pdf/2203.13366.pdf)
