--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3265,6 +3265,10 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 
 ![tiger](../assets/tiger.png)
 
+参考[Transformer memory as a differentiable search index](https://proceedings.neurips.cc/paper_files/paper/2022/file/892840a6123b5ec99ebaab8be1530fba-Paper-Conference.pdf)
+
+
+
 ## P5
 
 [Recommendation as Language Processing (RLP):A Unified Pretrain, Personalized Prompt & Predict Paradigm (P5)](https://arxiv.org/pdf/2203.13366.pdf)
