--- a/posts/8.int-ml.md
+++ b/posts/8.int-ml.md
@@ -1,5 +1,5 @@
 
-下载地址：[https://github.com/daiwk/collections/blob/master/pdfs/8.int-ml.pdf](https://github.com/daiwk/collections/blob/master/pdfs/8.int-ml.pdf)
+下载地址：[https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
 
 本文参考自李航的《统计学习方法》、周志华的《机器学习》、Hulu的《百面机器学习》等。
 
