--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3277,7 +3277,7 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 + Inputs2Target：即doc_tokens->doc_id
 + Target2Inputs：即doc_id->doc_tokens
 + bidirectional：同时用上两面两个任务，并且在开始时加一个前缀，表明任务的方向
-+ span corruption：类似T5，将doc_id当做前缀和doc_tokens拼起来，再用T5方式预训练，2个好处：
++ span corruption：参考T5（[Exploring the limits of transfer learning with a unified text-to-text transformer](https://arxiv.org/pdf/1910.10683.pdf)），将doc_id当做前缀和doc_tokens拼起来，2个好处：
     + 在索引时进行通用的预训练
     + 实现doc_id作为去噪目标和输入的平衡
 
@@ -3291,7 +3291,7 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 
 + 非结构化的原子标识符：直接对所有的文档使用一个随机但互不相同的的整数标识。假设一共有N篇文档需要检索，假设原来解码器输出有V个单词，现在有V+N个单词。
 + 朴素的结构化字符串标识符：也使用一个随机的整数，但将这个整数当做一个字符串输出，用受限的beam search搜索前k个文档，因为需要保证**输出的是数字**。
-+ 语义结构化的标识符：先用BERT产出每个doc的emb，然后递归k-means，第一次得到0-k作为第1个数字，第二次的0-k作为第2个数字，可以得到一个树，树的叶子结点就是一篇文档，文档的最终标识符就是从根节点到当前结点的路径对应的编号组合。
++ 语义结构化的标识符：先用BERT产出每个doc的emb，然后**递归10-means**，第一次得到0-9作为第1个数字，第二次的0-9作为第2个数字，可以得到一个树，文档的最终标识符就是从根节点到当前结点的路径对应的编号组合。只要一个节点的文档数大于$$c=100$$，就继续分裂，当叶子的文档数小于c时，每个文档随机分配一个1到$$c-1$$的id，拼到doc_id的最后。
 
 #### 训练方法
 
@@ -3299,8 +3299,122 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 
 用seq2seq，即**teacher forcing+交叉熵**，有如下两种方式：
 
-+ 先对indexing进行预训练（memorization），再进行将query映射为doc的微调
++ 先对indexing进行预训练（memorization），再进行**将query映射为docid**的微调
 + 用多任务的方式**同时进行**，两个任务用**不同的标识符**，这样做效果会好很多
+
+
+后来有一篇[Bridging the Gap Between Indexing and Retrieval for Differentiable Search Index with Query Generation](https://arxiv.org/pdf/2206.10128.pdf)，对应的github：[https://github.com/ArvinZhuang/DSI-QG](https://github.com/ArvinZhuang/DSI-QG)，他也同时尝试复现DSI：[https://github.com/ArvinZhuang/DSI-transformers](https://github.com/ArvinZhuang/DSI-transformers)，主要有如下两个地方：
+
++ 准备数据，doc_id
+
+```python
+class IndexingTrainDataset(Dataset):
+    def __init__(
+            self,
+            path_to_data,
+            max_length: int,
+            cache_dir: str,
+            tokenizer: PreTrainedTokenizer,
+    ):
+        self.train_data = datasets.load_dataset(
+            'json',
+            data_files=path_to_data,
+            ignore_verifications=False,
+            cache_dir=cache_dir
+        )['train']
+
+        self.max_length = max_length
+        self.tokenizer = tokenizer
+        self.total_len = len(self.train_data)
+
+
+    def __len__(self):
+        return self.total_len
+
+    def __getitem__(self, item):
+        data = self.train_data[item]
+
+        input_ids = self.tokenizer(data['text'],
+                                   return_tensors="pt",
+                                   truncation='only_first',
+                                   max_length=self.max_length).input_ids[0]
+        return input_ids, str(data['text_id'])
+
+
+@dataclass
+class IndexingCollator(DataCollatorWithPadding):
+    def __call__(self, features):
+        input_ids = [{'input_ids': x[0]} for x in features]
+        docids = [x[1] for x in features]
+        inputs = super().__call__(input_ids)
+
+        # label是doc_id
+        labels = self.tokenizer(
+            docids, padding="longest", return_tensors="pt"
+        ).input_ids
+
+        # replace padding token id's of the labels by -100 
+        # according to https://huggingface.co/docs/transformers/model_doc/t5#training
+        labels[labels == self.tokenizer.pad_token_id] = -100
+        inputs['labels'] = labels
+        return inputs
+
+```
+
++ 训练和预测
+
+```python
+class IndexingTrainer(Trainer):
+    def __init__(self, restrict_decode_vocab, **kwds):
+        super().__init__(**kwds)
+        self.restrict_decode_vocab = restrict_decode_vocab
+
+    def compute_loss(self, model, inputs, return_outputs=False):
+        ## 输入文章，预测doc_id
+        loss = model(input_ids=inputs['input_ids'], 
+            attention_mask=inputs['attention_mask'], labels=inputs['labels']).loss
+        if return_outputs:
+            return loss, [None, None]  # fake outputs
+        return loss
+
+    def prediction_step(
+            self,
+            model: nn.Module,
+            inputs: Dict[str, Union[torch.Tensor, Any]],
+            prediction_loss_only: bool,
+            ignore_keys: Optional[List[str]] = None,
+    ) -> Tuple[Optional[torch.Tensor], Optional[torch.Tensor], Optional[torch.Tensor]]:
+        model.eval()
+        # eval_loss = super().prediction_step(model, inputs, True, ignore_keys)[0]
+        with torch.no_grad():
+            # greedy search
+            doc_ids = model.generate(
+                inputs['input_ids'].to(self.args.device),
+                max_length=20,
+                prefix_allowed_tokens_fn=self.restrict_decode_vocab,
+                early_stopping=True,)
+        return (None, doc_ids, inputs['labels'])
+```
+
++ 对解码空间的限制：
+
+```python
+    # docid generation constrain, we only generate integer docids.
+    SPIECE_UNDERLINE = "▁"
+    INT_TOKEN_IDS = []
+    for token, id in tokenizer.get_vocab().items():
+        if token[0] == SPIECE_UNDERLINE:
+            if token[1:].isdigit():
+                INT_TOKEN_IDS.append(id)
+        if token == SPIECE_UNDERLINE:
+            INT_TOKEN_IDS.append(id)
+        elif token.isdigit():
+            INT_TOKEN_IDS.append(id)
+    INT_TOKEN_IDS.append(tokenizer.eos_token_id)
+
+    def restrict_decode_vocab(batch_idx, prefix_beam):
+        return INT_TOKEN_IDS
+```
 
 ### TIGER
 
