--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -535,7 +535,7 @@ xx
 
 ![](../assets/mind-comirec.png)
 
-
+sdim：[https://zhuanlan.zhihu.com/p/560657191](https://zhuanlan.zhihu.com/p/560657191)
 
 ## transformer+召回
 
@@ -553,6 +553,12 @@ ICLR2020 cmu+google：
 ## poly-encoder
 
 [https://zhuanlan.zhihu.com/p/119444637](https://zhuanlan.zhihu.com/p/119444637)
+
+## VIRT
+
+虚拟交互：让双塔模型向单塔模型模仿如何分配注意力权重
+
+[VIRT: Improving Representation-based Text Matching via Virtual Interaction](https://aclanthology.org/2022.emnlp-main.59.pdf)
 
 
 # 精排
