--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3508,10 +3508,31 @@ q-d双塔结构，在两个塔的最底层均加入：
 
 ![htps-disambiguate-query](../assets/htps-disambiguate-query.png)
 
-看着像是把用户历史的q-d pair对和当前query一起，过短期transformer和长期transformer得到输出，然后预估intent(这块具体逻辑要再看下)
+把用户历史的q-d pair对和当前query一起，过短期transformer和长期transformer得到输出$$q^l$$。
 
 ![htps-predict-intent](../assets/htps-predict-intent.png)
 
+把$$q^l$$加上[mask]，过transoformer得到预估的intent $$q^p$$
+
+然后将$$q^l$$和$$q^p$$通过gate nn融合得到最终的context-aware的query表示$$q^f$$
+
+最终doc和query的打分包括两部分，通过$$\phi$$（一个MLP，激活是tanh）进行融合：
+
+$$
+p(d \mid q, H)=\phi\left(p(d, q), p\left(d, q^H\right)\right)
+$$
+
++ $$p(d, q)$$：q和d的语义相似度，可以用正常的nlp模型得到
++ $$p\left(d, q^H\right)$$：q和d的个性化得分，公式如下，其中$$s^R$$是cos：
+
+$$
+p\left(d, q^H\right)=\phi\left(s^R\left(q^s, d^w\right), s^R\left(q^l, d^w\right), s^R\left(q^p, d^w\right), s^R\left(q^f, d^w\right)\right)
+$$
+
+有两个loss：
+
++ pred loss：预估intent，即下一个query，拿$$q^p$$与下一个query中各个词向量的avg算cos
++ rank loss：依据$$p(d \mid q, H)$$算lambda rank的pairwise loss
 
 ### 三塔+gnn邻居+mtl
 
