--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2871,6 +2871,13 @@ tokenizer：BPE，使用sentencepiece的实现。将所有numbers切成单个数
 + moe：
     + 
 
+
+# grok
+
+[马斯克开源Grok-1：3140亿参数迄今最大，权重架构全开放，磁力下载](https://mp.weixin.qq.com/s/hvt5zwoazDx26KOaKuTs_w)
+
+[https://github.com/xai-org/grok-1](https://github.com/xai-org/grok-1)
+
 # 多智能体
 
 [https://zhuanlan.zhihu.com/p/656676717](https://zhuanlan.zhihu.com/p/656676717)
@@ -3241,6 +3248,9 @@ sora是一个扩散模型，输入加了噪声的patches，还可以加上一些
 + 不能准确地模拟许多基本相互作用的物理过程，例如玻璃破碎。
 + 其他交互（例如吃食物）并不总是会产生对象状态的正确变化，例如长时间样本中出现的不连贯性或对象的自发出现。
 
+## open-sora
+
+[没等来OpenAI，等来了Open-Sora全面开源](https://mp.weixin.qq.com/s/vdr1WBCQVr9aS6bJYcdlRA)
 
 # 世界模型
 
