--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3285,9 +3285,27 @@ $$
 
 &nbsp;
 
-基于[PixArt-α: Fast Training of Diffusion Transformer for Photorealistic Text-to-Image Synthesis](https://arxiv.org/pdf/2310.00426.pdf)
+[PixArt-α: Fast Training of Diffusion Transformer for Photorealistic Text-to-Image Synthesis](https://arxiv.org/pdf/2310.00426.pdf)使用**T5作为条件**的**DiT**结构，能生成高质量的图像。用PixArt-α对模型初始化，并对**插入的temperal attentioin**用0初始化，能够让模型一开始就保留图片生成的能力。插入的attention让参数量从580M涨到了724M。
 
+![pixart-alpha-temperal](../assets/pixart-alpha-temperal.png)
 
+#### 训练
+
+&nbsp;
+
+参考PixArt-α和Stable Video Diffusioin，采用了progressive的训练策略：
+
++ 在质量相对差的366K的预训练数据集(HD-VG-130M数据集)上训练$$16\times 256\times 256$$，这里的16指的是16帧
++ 在高质量的20K的数据集(Pexels数据集)上训练$$16\times 256\times 256$$、$$16\times 512\times 512$$和$$64\times 512\times 512$$。
+
+由于使用了scaled position embedding，这个策略极大地减少了训练消耗。此外，对于16帧的训练，每3帧降采样一次，对于64帧的训练每2帧降采样一次。
+
+数据标注方法：抽取3帧，然后设计prompt，用LLaVA生成高质量的标题：
+
+![llava-caption](../assets/llava-caption.png)
+
++ 学习率：1e-4太大了，改成了2e-5
++ **batchsize比较大**的时候，**fp16比bf16更不稳定**，而且可能导致生成错误，所以对于$$64\times 512\times 512$$使用**bf16**
 
 # 世界模型
 
