--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2675,6 +2675,10 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 ### 开源rlhf库
 
+[https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/](https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/)
+
+[影响PPO算法性能的10个关键技巧（附PPO算法简洁Pytorch实现）](https://zhuanlan.zhihu.com/p/512327050)
+
 #### openai的lm-human-preferences(gpt2的finetune)
 
 [https://github.com/openai/lm-human-preferences](https://github.com/openai/lm-human-preferences)
