--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2952,35 +2952,22 @@ decoder的并行化： [https://zhuanlan.zhihu.com/p/368592551](https://zhuanlan
 用了tree-attention
 
 
-
-# 多模态大模型
-
+# 多模态（图像）
 
 [【IEEE Fellow何晓东&邓力】多模态智能论文综述：表示学习，信息融合与应用，259篇文献带你了解AI热点技](https://mp.weixin.qq.com/s/EMWpBP5iB1Qrleo3XNjbuQ)
 
 [Multimodal Intelligence: Representation  Learning, Information Fusion, and Applications](https://arxiv.org/abs/1911.03977)
 
-## 多模态BERT
-
 [BERT在多模态领域中的应用](https://mp.weixin.qq.com/s/THxlQX2MPXua0_N0Ug0EWA)
 
-CV领域：VisualBert, Unicoder-VL, VL-Bert, ViLBERT, LXMERT。
 
-### videobert
-
-
-[通过未标记视频进行跨模态时间表征学习](https://mp.weixin.qq.com/s/5qC70NoTBQ95vjI4cGl66g)
-
-[VideoBERT: A Joint Model for Video and Language Representation Learning](https://arxiv.org/abs/1904.01766)，VideoBert模型。
-
-
-### vilbert
+## vilbert
 
 [ViLBERT: Pretraining Task-Agnostic Visiolinguistic Representations for Vision-and-Language Tasks](https://arxiv.org/pdf/1908.02265.pdf)
 
 研究人员提出了一种名为 ViLBERT（图文 BERT）模型。这是一个可以学习任务未知的、图像内容和自然语言联合表征的模型。研究人员将流行的 BERT 架构扩展成一个 multi-modal two-stream 模型上。在这个模型上，模型用两个分开的流处理图像和文本输入，但他们彼此用联合注意力层交互。研究人员在两个代理任务上，使用 Conceptual Captions 数据集（数据集很大，而且是自动收集的数据）预训练这个模型，然后将模型秦阿姨到多个建立好的图像-文本任务上。这些任务包括图像问答、图像常识推理、引述表达、指称成分，以及基于捕捉的图像提取。这些只需要在基本架构上进行微小的补充。研究人员观察到，相比现有的针对任务的特定模型，新模型在这些任务上都有了相助的性能提升——在每个任务上都取得了 SOTA。
 
-### VLbert
+## VLbert
 
 Visual-Linguistic BERT，简称 VL-BERT
 
@@ -3005,6 +2992,21 @@ VL-BERT 的预训练主要采用三个任务：
 
 视觉常识推理任务即给定图片与相关问题，机器不仅需要回答问题，还需要提供理由来证明答案的正确性。此任务（Q->AR）被分解为两个子任务，即视觉问答（Q->A，给定图片与问题，输出正确答案），以及视觉推理（QA->R，给定图片、问题与答案，输出正确的理由）。
 
+## BEiT系列
+
+
+### BEiT
+
+[BEIT: BERT Pre-Training of Image Transformers](https://arxiv.org/pdf/2106.08254.pdf)
+
+### BEiT v2
+
+[BEIT V2: Masked Image Modeling with Vector-Quantized Visual Tokenizers](https://arxiv.org/pdf/2208.06366.pdf)
+
+### BEiT v3
+
+[Image as a Foreign Language: BEIT Pretraining for All Vision and Vision-Language Tasks](https://arxiv.org/pdf/2208.10442.pdf)
+
 ## ViT&Swin-Transformer
 
 [SwinTransformer与Vit细节总结](https://blog.csdn.net/taoqick/article/details/131362590)
@@ -3012,8 +3014,6 @@ VL-BERT 的预训练主要采用三个任务：
 [An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale](https://arxiv.org/pdf/2010.11929.pdf)
 
 对于一张$$224\times 224\times 3$$的图像，假设每个patch是$$16\times 16$$，那就分成$$\frac{224\times 224}{16\times 16}=196$$个patch(即$$seq\_length=196$$)，每个patch的维度是$$16\times 16\times 3=768$$，最后加上```[CLS]```这个token，就是$$seq\_length=197$$。
-
-
 
 ## stable diffusion
 
@@ -3092,7 +3092,6 @@ DALL-E3：
 + 在改进的数据集上训练文本 - 图像模型
 
 
-
 ## PALM-E
 
 [PaLM-E: An Embodied Multimodal Language Model](https://arxiv.org/abs/2303.03378)
@@ -3108,6 +3107,19 @@ DALL-E3：
 用户只需上传一张照片，就能轻松定制出多种风格的 AI 写真
 
 ![InstantID](../assets/InstantID.png)
+
+
+
+# 多模态（视频）
+
+
+## videobert
+
+
+[通过未标记视频进行跨模态时间表征学习](https://mp.weixin.qq.com/s/5qC70NoTBQ95vjI4cGl66g)
+
+[VideoBERT: A Joint Model for Video and Language Representation Learning](https://arxiv.org/abs/1904.01766)，VideoBert模型。
+
 
 ## SORA
 
@@ -3485,6 +3497,12 @@ class IndexingTrainer(Trainer):
     def restrict_decode_vocab(batch_idx, prefix_beam):
         return INT_TOKEN_IDS
 ```
+
+### vq-vae
+
+[Learning Vector-Quantized Item Representation for Transferable Sequential Recommenders](https://arxiv.org/pdf/2210.12316.pdf)
+
+[https://github.com/RUCAIBox/VQ-Rec](https://github.com/RUCAIBox/VQ-Rec)
 
 ### TIGER
 
