--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -511,6 +511,11 @@ $$
 \max _f \sum_{u \in \mathcal{V}} \log \operatorname{Pr}\left(N_K(u) \mid f(u)\right)
 $$
 
+### label smoothing
+
+[https://spaces.ac.cn/archives/7359](https://spaces.ac.cn/archives/7359)
+
+Label smooth通过soft one-hot来加入噪声,减少了真实样本标签的类别在计算损失函数时的权重,而把剩余的权重均匀分配到其他类别上,使得模型不会盲目自信,最终在fine-grained任务上能有效抑制过拟合。
 
 
 ## 突破双塔
