--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -124,6 +124,12 @@ annoy hnsw faiss pq
 + q和G*H相乘，就能得到q和每个item的相似度了
   + 【这步可以ann化】：GH就是k1*N，按列来看，就是N个k1维向量，相当于N个item向量，扔到annlib里去就行了，而输入的q也是一个k1维向量，就可以ann了
 
+
+## BLISS
+
+[BLISS: A Billion scale Index using Iterative Re-partitioning](https://gaurav16gupta.github.io/papers/BLISS_KDD2022.pdf)
+
+
 # 召回
 
 [360展示广告召回系统的演进](https://mp.weixin.qq.com/s/QqWGdVGVxSComuJT1SDo0Q)
