--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3326,6 +3326,14 @@ $$
 
 提供了便捷的视频数据预处理脚本，可以轻松地在自己的数据集上快速生成训练所需的视频 / 文本对，包括公开视频数据集下载，长视频根据镜头连续性分割为短视频片段，使用开源LLaVA生成精细的提示词。
 
+## MORA
+
+[Sora不开源，微软给你开源！全球最接近Sora视频模型诞生，12秒生成效果逼真炸裂](https://mp.weixin.qq.com/s/GkJwyVFVwxih-ZQWWBIuNg)
+
+[复刻Sora的通用视频生成能力，开源多智能体框架Mora来了](https://mp.weixin.qq.com/s/JbiwVtEuKvIjb8hBi0Laxg)
+
+[Mora: Enabling Generalist Video Generation via A Multi-Agent Framework](https://arxiv.org/pdf/2403.13248.pdf)
+
 # 世界模型
 
 [怒斥Sora之后，LeCun放出「视觉世界模型」论文，揭示AI学习物理世界的关键​](https://mp.weixin.qq.com/s/KY-bTD-bxdB3Q-q97Gv7fg)
@@ -3533,9 +3541,93 @@ TIGER(Transformer Index for GEnerative Recommenders)
 
 [Actions Speak Louder than Words: Trillion-Parameter Sequential Transducers for Generative Recommendations](https://arxiv.org/pdf/2402.17152.pdf)
 
-HSTU(Hierarchical Sequential Transduction Unit)
+#### 背景
+
+&nbsp;
+
+大规模推荐系统依赖高基数(high cardinality)、异质特性(heterogeneous features)，每天要处理上百亿用户行为数据。将推荐系统重新定义为生成模型框架内的序列转化任务，提出HSTU(Hierarchical Sequential Transduction Unit)，专为高基数、非稳态的流式推荐数据设计。
+
++ 在公开数据集比基线NDCG+65.8%
++ 在8192的序列长度上的处理速度比基于flash attention2的transformer快5.3-15.2倍。
++ 1.5万亿（1.5 trillion）参数，线上ab测试指标+12.4%
+
+在[Breaking the curse of quality saturation with user-centric ranking](https://arxiv.org/pdf/2305.15333.pdf)中提到了NCE（normalized cross-entropy）指标：
+
+$$
+\operatorname{NCE}(p, y)=\frac{\operatorname{CrossEntropy}(p, y)}{\operatorname{Entropy}(y)}
+$$
+
+![nce-metric](../assets/nce-metric.png)
+
+可以发现，对于一个预训练好的模型来说，随着时间的变化，NCE的变化是很剧烈的，即数据分布是会漂移的，并不像nlp/cv一样有ground truth，所以传统推荐模型其实很难达到比较好的scaling能力。
+
+![nce-distribution-drift](../assets/nce-distribution-drift.png)
+
+需要克服的3个挑战：
+
++ 推荐系统中的特征**缺少显式的结构**。序列建模（bert4rec、S3-rec等）在小规模数据集上效果不错，但工业界则需要**异构特征**（高基数的id、交叉特征、统计特征、历史点击率等）。
++ 推荐系统使用**十亿规模的动态词表**，而nlp用的是10w的静态词表，要对上万候选进行target-aware操作（din、Cold等），训练和推理的代价很高。
++ 大规模序列模型的计算成本是瓶颈。GPT-3在300B token的数据集上用上千个GPU训练1-2个月，而在推荐场景一天就有十亿级的活跃用户和十亿级的候选进行交互，用户序列在极端情况下有近10w（[Twin: Two- stage interest network for lifelong user behavior modeling in ctr prediction at kuaishou](https://arxiv.org/pdf/2302.02352.pdf)），所以推荐系统每天要处理的tokens数量甚至比语言模型1-2个月处理的数量要大几个数量级
+
+本文将**用户行为（action）**看成一个新的模态，2个主要的insights：
+
++ 给定一个新的特征空间，核心的召回排序任务能被直接转换成生成式模型问题(序列传导任务，sequential transduction tasks)
++ 这种范式能够系统性地解决传统推荐中的特征冗余、计算冗余、推理冗余，提升效率
+
+#### Sequential Transduction Tasks
+
+&nbsp;
+
+##### 异构特征的统一表示
+
+&nbsp;
+
++ 稀疏特征：
+    + 先选出**最长**的时间序列作为**主时间序列**，例如用户的交互序列。
+    + 剩下的特征随时间变化较慢，如关注作者的属性。对于连续出现的片段（consecutive segment），**只保留最开始的入口**，这样对于主时间序列而言，并不会增加太多的序列长度。
++ 数值型特征：这里指的是序列特征里**每个item的统计特征**，比如用户在时刻t对某个item的ctr。直接删了，因为DIN里提到随着序列长度增加，**target-aware**的序列建模方式能够捕捉到这种数值性特征
 
 ![hstu-dlrm-vs-gr](../assets/hstu-dlrm-vs-gr.png)
+
+假设用户消费了9个item，
+
++ 绿色的有7个时间步，全保留，作为主序列；
++ 蓝色的有7个时间步，但只有G0和G1两种取值，所以对于连续的G0只保留第0个(出现在t1)，扔到主序列的最前面去，连续的G1也只保留第0个（出现在t8），插到主序列最后一个的前面
++ 黄色的全是H0，第0个出现在t7，所以保留t7，往主序列t8前面插入
++ 将数值型特征替换为target-aware的cross attention得到causal-masked的特征
++ 通过t0、t1、t2的特征生成t2的样本，以此类推
+
+##### 召回和排序的重定义
+
+&nbsp;
+
+##### 生成式训练
+
+&nbsp;
+
+#### 生成式推荐中的高性能自注意力编码器
+
+&nbsp;
+
+##### pointwise聚合的注意力
+
+&nbsp;
+
+##### 增加稀疏性
+
+&nbsp;
+
+##### 最小化激活值的内存使用
+
+&nbsp;
+
+##### cost-amortization的预估scale up 
+
+&nbsp;
+
+摊销（amortization）
+
+
 
 ![hstu-arch](../assets/hstu-arch.png)
 
