--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3706,7 +3706,15 @@ $$
 \end{aligned}
 $$
 
+即：
 
++ $$n_i \leq N^{\alpha / 2}$$时，保留原始序列
++ $$n_i>N^{\alpha / 2}$$时，有$$N^\alpha / n_i^2 < 1$$：
+    + 以$$1-N^\alpha / n_i^2$$的概率只保留$$N^{\alpha / 2}$$长度的子序列
+    + 以$$N^\alpha / n_i^2$$的概率保留原始序列
+
+
+对于$$\alpha \in(1,2]$$，原来的attention相关的复杂度是$$O\left(N^2 d\right)$$，现在可以降低到$$O\left({N^{\alpha /2}}^2 d\right)=O\left(N^\alpha d\right)$$。
 
 ##### 最小化激活值的内存使用
 
