--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3687,11 +3687,8 @@ DLRM的3部分：
 | Architecture              | HR @10 | HR @50 |
 |---------------------------|--------|--------|
 | Transformers              | .0442  | .2025  |
-| HSTU ($$-rab^p,t$$, Softmax) | .0617  | .2496  |
-| HSTU ($$-rab^p$$,t)          | .0893  | .3170  |
-
-
-![hstu-softmax](../assets/hstu-softmax.png)
+| HSTU ($$-rab^{p,t}$$, Softmax) | .0617  | .2496  |
+| HSTU ($$-rab^{p,t}$$)          | .0893  | .3170  |
 
 ##### 增加稀疏性
 
@@ -3726,15 +3723,13 @@ $$
 
 对稀疏性的改善如下，其中稀疏性指的是$$1-avg\_seq\_len/max\_seq\_len$$，越大表示短序列越多，即越稀疏($$\alpha=2$$表示不SL，即直接使用原序列)：
 
-| Alpha ($$\alpha$$) | 1,024 | 2,048 | 4,096 | 8,192 |
+| Alpha ($$\alpha$$) | seq_len=1,024 | seq_len=2,048 | seq_len=4,096 | seq_len=8,192 |
 |-----------|-------|-------|-------|-------|
 | 1.6       | 71.5% | 76.1% | 80.5% | 84.4% |
 | 1.7       | 56.1% | 63.6% | 69.8% | 75.6% |
 | 1.8       | 40.2% | 45.3% | 54.1% | 66.4% |
 | 1.9       | 17.2% | 21.0% | 36.3% | 64.1% |
 | 2.0       | 3.1%  | 6.6%  | 29.1% | 64.1% |
-
-![hstu-sparsity](../assets/hstu-sparsity.png)
 
 ##### 最小化激活值的内存使用
 
